# parallel_programming_tp

./: .gitignore  README.md
GPU_TP1/: README.md
GPU_TP1/learning_material/: An Even Easier Introduction to CUDA - NVIDIA Developer Blog.url
GPU_TP1/src/: Makefile  reduction.cu  summation  summation.cu  summation.h  summation_kernel.cu
GPU_TP2/: README.md
GPU_TP2/src/: life  life.cu  life_kernel.cu
TP1/: CMakeLists.txt  README.md
TP1/src/: aggregation.c
TP2/: CMakeLists.txt  README.md  aggregation-openmp.c  main.c  mapreduce-openmp.c  philosophers-openmp.c  traffic-openmp.c
TP3/: CMakeLists.txt  README.md  text2digits.c  text2digitsMPI.c
TP4/: CMakeLists.txt  README.md  gameoflife.c  gameoflife.h  gameoflife_MPI.c  gameoflife_MPI_copy.c
TP4/src/lib/: CMakeLists.txt  gameoflife.c
TP4/src/lib/inc/: gameoflife.h
TP4/src/mpi/: CMakeLists.txt  CMakeLists_old.txt  gameoflife_MPI.c  gameoflife_MPI.h
TP4/src/seq/: CMakeLists.txt  gameoflife_Seq.c
